--- a/index.html
+++ b/index.html
@@ -139,8 +139,88 @@
 				<div class="intro_img">
 					<a href="#" class="part3_skip"></a>
 				</div>
-				<div class="intro_box">
-					
+				<div class="intro_box clearfix">
+					<div class="article article1">
+						<div class="cell">
+							<span class="num num1"></span>
+							<div class="con_txt">
+								<p>打开手机客户端，</p>
+								<p>行业专属供应商尽在身边。</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num3"></span>
+							<div class="con_txt">
+								<p>简单发布各类行业需求，</p>
+								
+								<p>快速获得相应供应商的支持。</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num2"></span>
+							<div class="con_txt">
+								<p>快速申请成为公关会展活动行业</p>
+								<p>供应商，请到&lt;我的→申请企业认证&gt;，</p>
+								<p>我们的服务专员将高速响应您的申请。</p>
+							</div>
+						</div>
+					</div>
+					<div class="article article3">
+						<div class="cell">
+							<span class="num num1"></span>
+							<div class="con_txt">
+								<p>行业供应商主要服务客户的方式之一是向客户提供
+“制作（租赁）报价”为了能让供应商在给客户报价
+时简单快捷，会展邦技术团队与行业专家共同研讨后
+研发了为了能让供应商在给客户报价时简单快捷，
+会展邦技术团队与行业专家共同研讨后研发了</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num2"></span>
+							<div class="con_txt">
+								<p>供应商通过手机给客户报价，免去电脑做表格，
+系统自动发送给客户。</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num3"></span>
+							<div class="con_txt">
+								<p>使用 “会展邦供应商”APP可及时获得会展邦
+订单，拓宽用户市场渠道</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num4"></span>
+							<div class="con_txt">
+								<p>会展邦供应商”APP为用户提供了免费的公司
+         宣传网页，免去网站的制 作费、推广费！</p>
+							</div>
+						</div>
+					</div>
+					<div class="article article2">
+						<div class="cell">
+							<span class="num num1"></span>
+							<div class="con_txt">
+								<p>对公关会展、活动采购执行有需求的企业及公关、会展、活动公司的项目经理、采购人员可通过此平台发布
+								&lt;舞美搭建&gt;&lt;灯光、音响、视频租赁&gt;</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num2"></span>
+							<div class="con_txt">
+								<p>&lt;篷房展具租赁&gt;&lt;礼仪、模特、演出&gt;&lt;摄影摄像&gt;&lt;活动场地&gt;的项目采购需求信息。用户发布一次需求信息即可得到平台推荐的多家供应商报价，提高了用户搜索、询价及比价效率。</p>
+							</div>
+						</div>
+						<div class="cell">
+							<span class="num num3"></span>
+							<div class="con_txt">
+								<p>快速申请成为公关会展活动行业</p>
+								<p>供应商，请到&lt;我的→申请企业认证&gt;，</p>
+								<p>我们的服务专员将高速响应您的申请。</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="silder_bar">
