--- a/mindex.html
+++ b/mindex.html
@@ -10,8 +10,8 @@
 		<meta name="format-detection" content="email=no" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
-		<link rel="stylesheet" type="text/css" href="css/mindex.css" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/footer.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="css/mindex.css" media="all" />
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/resize.js"></script>
 		<script type="text/javascript" src="js/xh.slide.js"></script>
@@ -36,6 +36,96 @@
 				</div>
 			</div>
 			<div id="part2" class="part part2">
+				<div class="content">
+					<div class="title"></div>
+					<div class="timeless_wapper">
+						<a class="arrow" href="#"></a>
+						<div class="timeless_box">
+							<div class="timeline">
+								<div class="time_con yellow up" style="top: 0;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新供应商认证展示</div>
+								</div>
+								<div class="time_add yellow" style="top: 75px;">
+									<div class="img"></div>
+									<div class="date">29日</div>
+								</div>
+
+
+								<div class="time_con purple down" style="top: 200px;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新成交案例代表大会</div>
+								</div>
+								<div class="time_add purple down" style="top: 275px;">
+									<div class="date">29日</div>
+									<div class="img"></div>
+								</div>
+
+								<div class="time_con blue up up2" style="top: 400px;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新成交案例代表大会</div>
+								</div>
+								<div class="time_add blue up" style="top: 475px;">
+									<div class="img"></div>
+									<div class="date">29日</div>
+								</div>
+								<div class="mouth blue" style="top: 490px;">8月</div>
+
+
+
+								<div class="time_con orange up" style="top: 800px;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新成交案例代表大会</div>
+								</div>
+								<div class="time_add orange up" style="top: 875px;">
+									<div class="img"></div>
+									<div class="date">29日</div>
+								</div>
+
+								<div class="time_con black up" style="top: 1200px;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新成交案例代表大会</div>
+								</div>
+								<div class="time_add black up" style="top: 1275px;">
+									<div class="img"></div>
+									<div class="date">29日</div>
+								</div>
+
+								<div class="time_con pink down" style="top: 600px;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新成交案例代表大会</div>
+								</div>
+								<div class="time_add pink down" style="top: 675px;">
+									<div class="img"></div>
+									<div class="date">29日</div>
+								</div>
+
+								<div class="time_con green down" style="top: 1000px;">
+									<a href="#" class="img">
+										<img src="img/index/test.png" />
+									</a>
+									<div class="txt">会展邦最新成交案例代表大会</div>
+								</div>
+								<div class="time_add green down" style="top: 1075px;">
+									<div class="date">29日</div>
+									<div class="img"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="part3 part" id="part3">
 				<div class="title">
